2013-03-11  Araki Ken  <arakiken@users.sf.net>

	* doc/en/PROTOCOL: Updated.

	* tool/w3m-remoteimg/README, README.ja:
	  Moved to doc/en/README.w3m, doc/ja/README.w3m

	* tool/w3m-0.5.3-remoteimg.patch:
	  Removed. (Moved to bitbucket repository.)

	* tool/tlex:
	  Removed. (Moved to bitbucket repository.)

2013-03-10  Araki Ken  <arakiken@users.sf.net>

	* w3m-0.5.3-remoteimg.patch: Time to wait for the response of
	  "\x1b[14t\x1b[18t" is changed from 0.1 sec to 0.5 sec.

2013-03-09  Araki Ken  <arakiken@users.sf.net>

	* mlclient/main.c: Extra space in arguments of OSC 5379 mlclient is removed.

	* w3m-remoteimg/README.ja: Minor fixes.

	* x_screen.c: Minor fixes.

2013-03-08  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, doc/ja/README.ja: Updated.

	* x_main_config.c:
	  -P option is assigned as the short option as --clip, and -M option is as --im.

	* kik_conf.[ch]: kik_conf_set_default_value() is removed for buiding mlterm.

	* x_screen.c:
	  --shortcut and --osc52 options which are specified as the arguments of
	  OSC 5379 mlclient are ignored.

2013-03-07  Araki Ken  <arakiken@users.sf.net>

	* x_main_config.c, x_screen.[ch]: "allow_change_shortcut" option is added.

	* man/mlterm.1, doc/ja/README.ja: Updated.

	* configure.in: DEXPORT is set in Solaris.

2013-03-06  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.w3m -> tool/w3m-remoteimg/README.ja
	  doc/en/README.w3m -> tool/w3m-remoteimg/README

	* tool/w3m-remoteimg: Added.

	* tlex/main.c: The previous commit around disable_logging flag in
	  parse_vtseq() is undone.

2013-03-05  Araki Ken  <arakiken@users.sf.net>

	* tlex/main.c:
	  - tlex client skips parsing vt sequence in parse_vtseq().
	  - Wrong check of disable_logging flag in parse_vtseq() is fixed.

	* tlex/ChangeLog: Added.

2013-03-04  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c, mlimgloader/Makefile.in: Minor fixes.

2013-03-02  Araki Ken  <arakiken@users.sf.net>
