@@ -10,6 +10,8 @@ ver 3.1.9
   Fix the conflict of DCS(0x90) and the first byte of SJIS, GBK and so on.
   Fix the bug which disabled input and output of pty when configuration program
   such as mlconfig is started.
+  Encode input character masked with 0x80 to the character encoding of pty
+  if the value of mod_meta_mode option is 8bit. (Thanks to Vladimir Elisseev)
 
 ver 3.1.8
 * Support framebuffer on FreeBSD. (Experimental)
