@@ -1,3 +1,11 @@
+2013-03-13  Araki Ken  <arakiken@users.sf.net>
+
+	* x_screen.c: If the value of mod_meta_mode option is 8bit, input
+	  character masked with 0x80 is encoded to the character encoding of pty.
+	  (Thanks to Vladimir Elisseev)
+
+	* x_main_config.c: Typo fixed.
+
 2013-03-11  Araki Ken  <arakiken@users.sf.net>
 
 	* doc/en/PROTOCOL: Updated.
